--- a/pom.xml
+++ b/pom.xml
@@ -379,9 +379,21 @@
 	        <dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
-				<version>1.8.4</version>
+				<version>1.9.5</version>
 				<scope>test</scope>
 			</dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-module-junit4</artifactId>
+                <version>1.5.1</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-api-mockito</artifactId>
+                <version>1.5.1</version>
+                <scope>test</scope>
+            </dependency>
 	        <dependency>
 	            <groupId>org.codehaus.jackson</groupId>
 	            <artifactId>jackson-mapper-asl</artifactId>
