Fixes #526: Discrepancy shortcut within the CRF. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@632 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -344,6 +344,18 @@
     </servlet>
 
     <servlet>
+        <servlet-name>updateCRFHeaderServlet</servlet-name>
+        <display-name>UpdateCRFHeaderServlet</display-name>
+        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>updateDNShortcutAnchorsServlet</servlet-name>
+        <display-name>UpdateDNShortcutAnchorsServlet</display-name>
+        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
+    </servlet>
+
+    <servlet>
         <servlet-name>mainMenuServlet</servlet-name>
         <display-name>MainMenuServlet</display-name>
         <description>The Main Servlet</description>
@@ -1434,6 +1446,16 @@
     <servlet-mapping>
         <servlet-name>FormServlet</servlet-name>
         <url-pattern>/form</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>updateCRFHeaderServlet</servlet-name>
+        <url-pattern>/UpdateCRFHeader</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>updateDNShortcutAnchorsServlet</servlet-name>
+        <url-pattern>/UpdateDNShortcutAnchors</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
