--- a/ws/pom.xml
+++ b/ws/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.clinovo.clincapture</groupId>
         <artifactId>clincapture</artifactId>
-        <version>1.0.3.4-SNAPSHOT</version>
+        <version>1.0.3.4</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
