Fixes #635: Fix the edit/remove/restore site workflow. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@667 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -686,9 +686,9 @@
         <servlet-class>org.akaza.openclinica.control.submit.DoubleDataEntryServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>ListSiteServlet</servlet-name>
+        <servlet-name>listSiteServlet</servlet-name>
         <display-name>ListSite</display-name>
-        <servlet-class>org.akaza.openclinica.control.managestudy.ListSiteServlet</servlet-class>
+        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ViewSiteServlet</servlet-name>
@@ -1738,7 +1738,7 @@
         <url-pattern>/ChangeStudy</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>ListSiteServlet</servlet-name>
+        <servlet-name>listSiteServlet</servlet-name>
         <url-pattern>/ListSite</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
