Fixes #416: Update to DN Flags if more than one RFC is already present. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@691 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -832,6 +832,11 @@
         <servlet-class>org.akaza.openclinica.control.managestudy.ViewEventCRFServlet</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>ChangeParametersForDNoteServlet</servlet-name>
+        <display-name>ChangeParametersForDNote</display-name>
+        <servlet-class>org.akaza.openclinica.control.submit.ChangeParametersForDNoteServlet</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>ReassignStudySubjectServlet</servlet-name>
         <display-name>ReassignStudySubject</display-name>
         <servlet-class>org.akaza.openclinica.control.managestudy.ReassignStudySubjectServlet</servlet-class>
@@ -1840,6 +1845,10 @@
     <servlet-mapping>
         <servlet-name>ViewEventCRFServlet</servlet-name>
         <url-pattern>/ViewEventCRF</url-pattern>
+    </servlet-mapping>
+     <servlet-mapping>
+        <servlet-name>ChangeParametersForDNoteServlet</servlet-name>
+        <url-pattern>/ChangeParametersForDNote</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>ReassignStudySubjectServlet</servlet-name>
